Polish
See gh-39382