@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,8 +18,8 @@ package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentatio
 
 import java.time.OffsetDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -56,7 +56,7 @@ class AuditEventsEndpointDocumentationTests extends MockMvcEndpointDocumentation
 	void allAuditEvents() throws Exception {
 		String queryTimestamp = "2017-11-07T09:37Z";
 		given(this.repository.find(any(), any(), any()))
-			.willReturn(Arrays.asList(new AuditEvent("alice", "logout", Collections.emptyMap())));
+			.willReturn(List.of(new AuditEvent("alice", "logout", Collections.emptyMap())));
 		this.mockMvc.perform(get("/actuator/auditevents").param("after", queryTimestamp))
 			.andExpect(status().isOk())
 			.andDo(document("auditevents/all",
@@ -72,7 +72,7 @@ class AuditEventsEndpointDocumentationTests extends MockMvcEndpointDocumentation
 		OffsetDateTime now = OffsetDateTime.now();
 		String queryTimestamp = DateTimeFormatter.ISO_OFFSET_DATE_TIME.format(now);
 		given(this.repository.find("alice", now.toInstant(), "logout"))
-			.willReturn(Arrays.asList(new AuditEvent("alice", "logout", Collections.emptyMap())));
+			.willReturn(List.of(new AuditEvent("alice", "logout", Collections.emptyMap())));
 		this.mockMvc
 			.perform(get("/actuator/auditevents").param("principal", "alice")
 				.param("after", queryTimestamp)
